Changing light palette 600 and font colors
I changed light-600 color and made the font colors more readable

--- a/src/themes.scss
+++ b/src/themes.scss
@@ -51,21 +51,21 @@ $my-light-palette: (
   300: #dd8407,
   400: #d38200,
   500: #dadac5,
-  600: #a9a993,
+  600: #9b9b86,
   700: #7a7a68,
   800: #676751,
   900: #474833,
   contrast: (
-    50: black,
-    100: black,
-    200: black,
-    300: black,
-    400: black,
-    500: black,
-    600: black,
-    700: white,
-    800: white,
-    900: white,
+    50: hsl(0, 0%, 5%),
+    100: hsl(0, 0%, 5%),
+    200: hsl(0, 0%, 5%),
+    300: hsl(0, 0%, 5%),
+    400: hsl(0, 0%, 5%),
+    500: hsl(0, 0%, 5%),
+    600: hsl(0, 0%, 5%),
+    700: hsl(0, 0%, 90%),
+    800: hsl(0, 0%, 90%),
+    900: hsl(0, 0%, 90%),
   ),
 );
 $my-dark-palette: (
