--- a/src/reusable/SVGs/shopping-three/shopping-three.component.html
+++ b/src/reusable/SVGs/shopping-three/shopping-three.component.html
@@ -1,13 +1,7 @@
 <!-- Generator: Adobe Illustrator 27.5.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <!-- <?xml version="1.0" encoding="utf-8"?> -->
 
-<svg
-  xmlns="http://www.w3.org/2000/svg"
-  x="0px"
-  y="0px"
-  viewBox="0 0 500 500"
-  #svgElement
->
+<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 500 500">
   <g id="Background_Complete">
     <g>
       <rect
@@ -2976,74 +2970,74 @@
   <g id="Stars">
     <g>
       <polygon
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         points="233.986,65.582 226.559,66.956 224.899,74.786 223.239,66.956 215.811,65.578 
 			223.207,63.771 224.899,56.375 226.591,63.771 		"
       />
       <polygon
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         points="130.851,103.443 126.7,104.211 125.772,108.587 124.844,104.211 120.692,103.441 
 			124.826,102.431 125.772,98.297 126.717,102.431 		"
       />
       <polygon
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         points="331.803,105.074 327.651,105.842 326.723,110.218 325.796,105.842 321.644,105.072 
 			325.778,104.062 326.723,99.928 327.669,104.062 		"
       />
       <polygon
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         points="391.484,147.495 387.333,148.262 386.405,152.639 385.477,148.262 381.326,147.493 
 			385.459,146.483 386.405,142.349 387.35,146.483 		"
       />
       <polygon
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         points="305.829,183.569 301.678,184.336 300.75,188.713 299.822,184.336 295.67,183.566 
 			299.804,182.557 300.75,178.423 301.695,182.557 		"
       />
       <polygon
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         points="168.904,173.052 164.753,173.819 163.825,178.196 162.897,173.819 158.745,173.05 
 			162.879,172.04 163.825,167.906 164.771,172.04 		"
       />
       <polygon
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         points="97.422,210.491 93.271,211.258 92.343,215.635 91.415,211.258 87.264,210.488 
 			91.397,209.478 92.343,205.344 93.289,209.478 		"
       />
       <path
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         d="M288.609,159.098c-1.549,0-1.551,2.407,0,2.407C290.158,161.505,290.16,159.098,288.609,159.098z"
       />
       <path
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         d="M176.986,142.413c-1.549,0-1.551,2.407,0,2.407C178.535,144.82,178.538,142.413,176.986,142.413z"
       />
       <path
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         d="M77.436,218.874c-1.549,0-1.551,2.406,0,2.406C78.984,221.281,78.987,218.874,77.436,218.874z"
       />
       <path
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         d="M157.201,151.008c-1.096,0-1.097,1.703,0,1.703C158.296,152.711,158.298,151.008,157.201,151.008z"
       />
       <path
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         d="M109.596,159.45c-1.095,0-1.097,1.703,0,1.703C110.692,161.153,110.694,159.45,109.596,159.45z"
       />
       <path
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         d="M211.163,74.786c-1.095,0-1.097,1.703,0,1.703C212.259,76.488,212.261,74.786,211.163,74.786z"
       />
       <path
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         d="M341.543,120.27c-1.095,0-1.097,1.703,0,1.703C342.639,121.973,342.641,120.27,341.543,120.27z"
       />
       <path
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         d="M421.498,198.701c-2.97,0-2.974,4.615,0,4.615C424.467,203.316,424.472,198.701,421.498,198.701z"
       />
       <path
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         d="M272.306,77.935c-2.97,0-2.974,4.615,0,4.615C275.276,82.55,275.281,77.935,272.306,77.935z"
       />
     </g>
@@ -3055,7 +3049,7 @@
           <g>
             <g>
               <polygon
-                [style]="{ fill: primaryColor }"
+                data-svg-primary-color
                 points="117.476,232.525 206.209,260.465 181.07,382.256 76.954,352.624 						"
               />
               <polygon
@@ -3065,7 +3059,7 @@
             </g>
             <g>
               <polygon
-                [style]="{ fill: primaryColor }"
+                data-svg-primary-color
                 points="76.954,352.624 47.097,337.771 105.623,227.023 110.28,232.165 117.476,232.525 						
 							"
               />
@@ -3081,14 +3075,14 @@
             </g>
             <g>
               <path
-                [style]="{ fill: primaryColor }"
+                data-svg-primary-color
                 d="M77.163,349.805c-1.621-2.899-3.397-5.694-5.172-8.489c-1.797-2.78-3.644-5.526-5.542-8.237
 							l-0.262-0.374l-0.438,0.085c-2.731,0.529-5.46,1.065-8.167,1.708c-2.715,0.609-5.421,1.258-8.106,2.023
 							c2.784-0.254,5.546-0.624,8.299-1.033c2.76-0.375,5.5-0.859,8.237-1.348l-0.7-0.289c1.863,2.735,3.777,5.436,5.741,8.103
 							C73.038,344.606,75.024,347.258,77.163,349.805z"
               />
               <path
-                [style]="{ fill: primaryColor }"
+                data-svg-primary-color
                 d="M65.725,333.735c3.997-8.346,7.841-16.759,11.662-25.182
 							c3.824-8.421,7.524-16.898,11.291-25.343c3.655-8.495,7.37-16.964,10.97-25.485l5.371-12.792
 							c1.739-4.286,3.527-8.552,5.224-12.856c-2.012,4.167-3.935,8.373-5.906,12.558l-5.759,12.623
@@ -3165,7 +3159,7 @@
           />
           <g>
             <path
-              [style]="{ fill: primaryColor }"
+              data-svg-primary-color
               d="M279.798,322.31l53.121-39.642c0,0-51.184-52.847-77.786-72.539
 						c-22.354-16.547-33.583-4.869-19.585,27.882C248.796,269.01,279.798,322.31,279.798,322.31z"
             />
@@ -3199,7 +3193,7 @@
         </g>
         <g>
           <path
-            [style]="{ fill: primaryColor }"
+            data-svg-primary-color
             d="M241.183,204.589c0,0,11.195,7.124,16.478,21.549c5.283,14.425,33.145,82.482,37.91,97.329
 					c4.764,14.847,41.887,87.146,41.887,87.146s-20.389,21.933-26.334,26.441c-8.275,6.276-38.224,16.268-38.224,16.268
 					s-12.538-107.929-14.884-118.895C255.67,323.462,241.183,204.589,241.183,204.589z"
@@ -3340,7 +3334,7 @@
           </g>
           <g>
             <path
-              [style]="{ fill: primaryColor }"
+              data-svg-primary-color
               d="M212.623,200.4c0,0,0.587,107.712-0.642,117.159c-1.229,9.447-22.671,139.088-22.671,139.088
 						s-45.971-9.325-52.237-13.756c-6.267-4.432-17.177-30.011-17.177-30.011s27.295-66.043,29.772-72.906
 						c3.539-9.804,36.572-112.529,45.015-126.406C201.326,202.646,212.623,200.4,212.623,200.4z"
@@ -3385,7 +3379,7 @@
           />
           <g>
             <path
-              [style]="{ fill: primaryColor }"
+              data-svg-primary-color
               d="M117.197,289.958l56.097,35.306c0,0,29.845-64.59,35.598-98.475
 						c4.656-27.42-3.431-33.284-28.955-8.443C155.778,241.859,117.197,289.958,117.197,289.958z"
             />
@@ -3481,13 +3475,13 @@
                   <g>
                     <g>
                       <polygon
-                        [style]="{ fill: primaryColor }"
+                        data-svg-primary-color
                         points="328.096,238.579 430.47,238.197 445.421,411.407 326.854,417.392 										"
                       />
                     </g>
                     <g>
                       <polygon
-                        [style]="{ fill: primaryColor }"
+                        data-svg-primary-color
                         points="326.854,417.392 290.685,410.587 313.873,236.407 320.477,241.255 
 											328.096,238.579 										"
                       />
@@ -3754,7 +3748,7 @@
               </g>
               <g>
                 <path
-                  [style]="{ fill: primaryColor }"
+                  data-svg-primary-color
                   d="M255.958,94.614c-4.381-2.813-14.843-8.377-24.079-8.7c-9.413-0.33-21.572,4.109-25.823,5.505
 								c-3.495,1.148-15.229,2.315-24.216,7.226c-5.922,3.236-8.578,11.834-7.772,16.097c1.21,6.404,14.371,2.699,14.97,5.177
 								c0.398,1.646-1.89,9.831,2.112,13.675c3.996,3.838,3.832,3.242,6.118,5.355c5.551,5.131,12.562-25.077,23.915-33.178
@@ -3768,7 +3762,7 @@
                 />
                 <g>
                   <path
-                    [style]="{ fill: primaryColor }"
+                    data-svg-primary-color
                     d="M198.362,152.184c6.373-9.221,12.619-24.029,22.805-34.625
 									c10.186-10.596,35.653-13.673,39.027-12.934c8.19,1.795,9.374,6.038,10.8,5.508c1.427-0.531-5.342-11.242-7.448-13.006
 									c-2.106-1.764-7.366-4.202-10.974-4.689c-3.608-0.487-26.117-1.82-35.679,6.344c-9.562,8.165-25.182,32.829-24.175,39.942
@@ -4014,7 +4008,7 @@
       <g>
         <g>
           <path
-            [style]="{ fill: primaryColor }"
+            data-svg-primary-color
             d="M111.967,377.566c-11.55,15.643-23.593,33.796-26.525,53.412
 					c-0.035,0.297,0.44,0.394,0.509,0.099c1.341-5.38,3.037-10.605,5.108-15.706c7.593-2.09,15.046-3.806,19.034-11.343
 					c4.067-7.748,3.55-17.849,2.777-26.288C112.816,377.288,112.202,377.266,111.967,377.566z"
@@ -4037,7 +4031,7 @@
         </g>
         <g>
           <path
-            [style]="{ fill: primaryColor }"
+            data-svg-primary-color
             d="M84.106,428.063c0.024,0.238,0.427,0.233,0.422-0.02c0.06-6.46,0.006-12.95,0.103-19.439
 					c1.655-3.34,5.207-5.188,7.677-7.864c1.781-1.931,3.304-4.11,4.607-6.415c3.055-5.466,4.708-11.61,5.345-17.82
 					c0.682-6.91-1.94-29.711-4.853-28.919c-1.511,0.41-6.399,11.704-7.695,15.438c-2.124,6.142-3.618,12.507-4.597,18.93
@@ -4073,7 +4067,7 @@
         </g>
         <g>
           <path
-            [style]="{ fill: primaryColor }"
+            data-svg-primary-color
             d="M79.734,409.381c-0.11,4.28-0.573,8.561-1.509,12.727c0.066,0.46,0.132,0.919,0.2,1.393
 					c1.349-4.637,2.054-9.39,2.276-14.186c0.074-0.133,0.104-0.277,0.02-0.439c0,0,0,0-0.001-0.014
 					c0.244-6.406-0.35-12.883-1.426-19.221c-2-11.872-6.371-23.266-14.651-32.164c-0.263-0.274-0.786-0.132-0.915,0.189
@@ -4104,7 +4098,7 @@
         </g>
         <g>
           <path
-            [style]="{ fill: primaryColor }"
+            data-svg-primary-color
             d="M53.328,385.934c0.63,6.552,4.077,14.378,8.28,19.427c1.862,2.233,4.122,3.941,6.715,5.24
 					c2.908,1.439,5.953,3.096,8.962,4.277c1.406,3.591,2.482,7.351,3.173,11.271c0.097-0.328,0.194-0.67,0.291-0.998
 					c-1.931-16.588-12.665-30.767-26.396-39.869C53.859,384.953,53.274,385.374,53.328,385.934z"
@@ -4176,7 +4170,7 @@
         />
       </g>
       <path
-        [style]="{ fill: primaryColor }"
+        data-svg-primary-color
         d="M350.015,101.266c-7.083,9.373-15.544,13.487-15.544,13.487s-8.454-4.114-15.538-13.487
 			c-5.471-7.241-5.202-18.578,2.626-21.03c8.657-2.712,12.911,10.316,12.911,10.316s4.316-13.114,12.918-10.316
 			C355.19,82.773,355.487,94.025,350.015,101.266z"
