--- a/src/app/getting-started/first-view/first-view.component.scss
+++ b/src/app/getting-started/first-view/first-view.component.scss
@@ -1,3 +1,5 @@
+@use "../../../scss/utils.scss" as *;
+
 main,
 .greeting {
   background-color: var(--color-50);
@@ -15,19 +17,20 @@ main {
   left: 0;
   bottom: 0;
   padding: 1.8em;
-  min-height: 65vmax;
+  min-height: 50vmin;
   text-align: center;
   border-top: {
     left-radius: var(--border-radius);
     right-radius: var(--border-radius);
   }
+  box-shadow: inset 0 45px 50px -25px var(--color-50);
   z-index: 0;
 
   display: grid;
-  gap: 1.5rem;
+  gap: 0.75vh;
   place-items: center;
 
-  animation: fadeIn 1s cubic-bezier(0.455, 0.03, 0.515, 0.955) 150ms both;
+  animation: fadeIn-vol-1 1s cubic-bezier(0.455, 0.03, 0.515, 0.955) 150ms both;
 
   &__header {
     margin-bottom: 0.5em;
@@ -44,13 +47,9 @@ main {
     row-gap: var(--space-between-items);
 
     &::before {
-      content: "";
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
+      @extend %fillBeforeAfter;
       background-color: var(--color-100);
+      box-shadow: inset 0px 0px 45px 10px rgba(255, 255, 255, 0.2);
       opacity: 0.8;
       border-radius: 20px;
     }
@@ -73,6 +72,7 @@ main {
       bottom: 1rem;
     }
     border: 0;
+    border-radius: var(--border-radius);
     padding: 1em 1.9em;
     font-size: 1.25rem;
     font-weight: 500;
@@ -81,15 +81,11 @@ main {
     z-index: 0;
 
     &::before {
-      content: "";
       z-index: -1;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      @extend %fillBeforeAfter;
       border-radius: var(--border-radius);
       background-color: var(--color-400);
+      box-shadow: inset 0px 0px 45px 10px rgba(255, 255, 255, 0.25);
       color: var(--contrast-color-400);
       transition: opacity 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
     }
@@ -102,41 +98,22 @@ main {
   }
 }
 
-.fade-out-animation-element {
-  animation: fadeOut 500ms cubic-bezier(0.755, 0.05, 0.855, 0.06) forwards;
-  animation-play-state: paused;
-}
-.fill-the-view-animation-element {
+.fill-the-view-animation {
   animation: fillTheView 1.2s cubic-bezier(0.19, 1, 0.22, 1) forwards;
-  animation-play-state: paused;
-}
-.play {
-  animation-play-state: running;
-}
-
-@keyframes fadeIn {
-  from {
-    transform: translateY(10%) scale(1.1);
-  }
-  to {
-    transform: translateY(0%);
-  }
-}
-@keyframes fadeOut {
-  // 0% {
-  //   opacity: 1;
-  // }
-  75%,
-  100% {
-    opacity: 0;
-    transform: translateY(-5%);
-  }
 }
 @keyframes fillTheView {
-  from {
-    transform: scaleY(1);
-  }
   to {
-    transform: scaleY(2.3);
+    min-height: 105vh;
+    min-height: 105dvh;
   }
 }
+
+/*
+
+Notes for the desktop view:
+
+Breakpoint - 700px
+
+The image on the left side and the other parts on the right (for all getting-started views)
+
+*/
