--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,42 +1,3 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-// @use "@angular/material" as mat;
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-// @include mat.core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-// $Memo-licious-primary: mat.define-palette(mat.$indigo-palette);
-// $Memo-licious-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-// $Memo-licious-warn: mat.define-palette(mat.$red-palette);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-// $Memo-licious-theme: mat.define-light-theme(
-//   (
-//     color: (
-//       primary: $Memo-licious-primary,
-//       accent: $Memo-licious-accent,
-//       warn: $Memo-licious-warn,
-//     ),
-//   )
-// );
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-// @include mat.all-component-themes($Memo-licious-theme);
-
-/* You can add global styles to this file, and also import other style files */
-
-// @use "./utils.scss" as utils;
 @use "../app/animations/animations.scss" as anim;
 @use "@angular/material" as mat;
 @use "./themes.scss" as theme;
@@ -46,16 +7,23 @@
 :root {
   @include theme.createCSSVars("light");
   --validation-error: rgb(150, 25, 25);
+
+  // font sizes
+  --h1: 2rem;
+  --h2: 1.75rem;
+  --h3: 1.3rem;
+  --p: 1rem;
+  --form-input: 0.95rem;
 }
 
-// @media (prefers-color-scheme: dark) {
-//   @include mat.core-color(theme.$dark-theme);
-//   // @include mat.all-component-themes(theme.$dark-theme);
-//   @include mat.all-component-colors(theme.$dark-theme);
-//   :root {
-//     @include theme.createCSSVars("dark");
-//   }
-// }
+@media (prefers-color-scheme: dark) {
+  @include mat.core-color(theme.$dark-theme);
+  // @include mat.all-component-themes(theme.$dark-theme);
+  @include mat.all-component-colors(theme.$dark-theme);
+  :root {
+    @include theme.createCSSVars("dark");
+  }
+}
 
 *,
 *::before,
@@ -74,7 +42,5 @@ body {
   height: 100%;
 }
 body {
-  // background-color: var(--color-50);
-  // color: var(--contrast-color-50);
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
