--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -1,7 +1,7 @@
 %mainframe {
   width: 100%;
-  height: 100vh;
-  height: 100dvh;
+  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 %fillBeforeAfter {
@@ -11,4 +11,45 @@
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+%font-size-sm {
+  font-size: var(--form-input);
+}
+
+@mixin box-shadow-inset($color) {
+  box-shadow: inset 0 0 15px var(#{$color});
+  transition: box-shadow 250ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+
+  &:hover,
+  &:focus,
+  &:focus-visible {
+    box-shadow: none;
+  }
+}
+
+%flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+%gap-sm {
+  gap: 0.75rem;
+}
+
+%border-radius-sm {
+  border-radius: 6px;
+}
+%border-radius-md {
+  border-radius: 15px;
+}
+%border-radius-lg {
+  border-radius: 25px;
+}
+%border-radius-pill {
+  border-radius: 9999px;
+}
+%border-radius-circle {
+  border-radius: 50%;
 }
