--- a/src/app/getting-started/first-view/first-view.component.scss
+++ b/src/app/getting-started/first-view/first-view.component.scss
@@ -2,28 +2,34 @@
 
 main,
 .greeting {
-  background-color: var(--color-50);
-  color: var(--contrast-color-50);
+  background-color: var(--color-accent-50);
+  color: var(--contrast-color-accent-50);
 }
 
 main {
+  @extend %mainframe;
   overflow: hidden;
+
+  @media (max-height: 700px) {
+    .greeting {
+      min-height: 50vh;
+    }
+  }
 }
 
 .greeting {
   --border-radius: 35px;
-  font-size: 1.1rem;
   position: fixed;
   left: 0;
   bottom: 0;
   padding: 1.8em;
-  min-height: 50vmin;
+  min-height: 65vh;
   text-align: center;
   border-top: {
     left-radius: var(--border-radius);
     right-radius: var(--border-radius);
   }
-  box-shadow: inset 0 45px 50px -25px var(--color-50);
+  box-shadow: inset 0 45px 50px -25px var(--color-accent-100);
   z-index: 0;
 
   display: grid;
@@ -34,7 +40,7 @@ main {
 
   &__header {
     margin-bottom: 0.5em;
-    font-size: 2.25rem;
+    font-size: var(--h1);
   }
 
   &__par-container {
@@ -48,7 +54,7 @@ main {
 
     &::before {
       @extend %fillBeforeAfter;
-      background-color: var(--color-100);
+      background-color: var(--color-accent-200);
       box-shadow: inset 0px 0px 45px 10px rgba(255, 255, 255, 0.2);
       opacity: 0.8;
       border-radius: 20px;
@@ -56,6 +62,7 @@ main {
   }
 
   &__par {
+    font-size: var(--p);
     text-align: start;
     font-weight: 500;
 
@@ -65,26 +72,29 @@ main {
   }
 
   &__CTA {
-    --border-radius: 100px;
     position: relative;
     margin: {
       top: 1rem;
       bottom: 1rem;
     }
-    border: 0;
-    border-radius: var(--border-radius);
-    padding: 1em 1.9em;
-    font-size: 1.25rem;
+    border: none;
+    padding: 0.75em 1.25em;
+    font-size: var(--h3);
     font-weight: 500;
     text-decoration: none;
     color: inherit;
     z-index: 0;
 
+    &,
+    &::before {
+      cursor: pointer;
+      border-radius: 100px;
+    }
+
     &::before {
       z-index: -1;
       @extend %fillBeforeAfter;
-      border-radius: var(--border-radius);
-      background-color: var(--color-400);
+      background-color: var(--color-main-400);
       box-shadow: inset 0px 0px 45px 10px rgba(255, 255, 255, 0.25);
       color: var(--contrast-color-400);
       transition: opacity 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
