--- a/src/app/getting-started/login-or-guest-view/login-or-guest-view.component.scss
+++ b/src/app/getting-started/login-or-guest-view/login-or-guest-view.component.scss
@@ -1,16 +1,15 @@
 @use "../../../scss/utils.scss" as *;
 
 main {
-  background-color: var(--color-50);
-  --desired-color: var(--color-500);
-
   @extend %mainframe;
+  background-color: var(--color-accent-50);
 
   display: grid;
   align-items: end;
   grid-template-rows: 1fr auto;
   justify-items: center;
 
+  --desired-color: var(--color-accent-100); // element of changeColor animation
   animation: changeColor 800ms cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards;
 }
 
@@ -54,9 +53,9 @@ main {
   grid-template-columns: repeat(9, 1fr);
   row-gap: 1.75rem;
 
-  color: var(--contrast-color-600);
-  background-color: var(--color-600);
-  box-shadow: inset 0 45px 50px -25px var(--color-500);
+  color: var(--contrast-color-accent-300);
+  background-color: var(--color-accent-300);
+  box-shadow: inset 0 45px 50px -25px var(--color-accent-200);
 
   &__offline,
   &__online {
@@ -78,7 +77,7 @@ main {
   }
 
   & h2 {
-    font-size: 1.25rem;
+    font-size: var(--h2);
     font-weight: 500;
     margin-bottom: var(--padding);
   }
@@ -91,8 +90,8 @@ main {
   height: inherit;
   padding: 0.5em 1.4em;
   border-radius: 20px;
-  background-color: var(--color-800);
-  color: var(--contrast-color-800);
+  background-color: var(--color-main-400);
+  color: var(--contrast-color-main-400);
   line-break: auto;
 
   &:hover {
@@ -101,14 +100,14 @@ main {
 }
 
 .CTA {
-  --shadow-color: var(--contrast-color-600);
+  // --shadow-color: var(--contrast-color-main-600);
   @extend %CTA;
 
   &--alternative {
-    --shadow-color: var(--contrast-color-500);
+    // --shadow-color: var(--contrast-color-main-500);
     @extend %CTA;
-    background-color: var(--color-500);
-    color: var(--contrast-color-500);
+    background-color: var(--color-main-600);
+    color: var(--contrast-color-main-600);
   }
 }
 
@@ -116,5 +115,5 @@ main {
   grid-column: 1 / -1;
   font-weight: 600;
   margin-top: 0.75rem;
-  font-size: 2rem;
+  font-size: var(--h1);
 }
