--- a/src/app/reusable/animations/animations.scss
+++ b/src/app/reusable/animations/animations.scss
@@ -6,9 +6,6 @@
   from {
     transform: translateY(10%) scale(1.1);
   }
-  to {
-    transform: translateY(0%);
-  }
 }
 
 .fade-out-animation {
@@ -24,7 +21,31 @@
   }
 }
 
+.fade-out-vol-2-animation {
+  animation: fadeOut 500ms cubic-bezier(0.755, 0.05, 0.855, 0.06) forwards;
+  animation-play-state: paused;
+}
+
+@keyframes fadeOut-vol-2 {
+  50%,
+  100% {
+    opacity: 0;
+    transform: translateY(-5%);
+  }
+}
+
+.color-transition {
+  animation: changeColor 800ms cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards;
+  /*
+    --original-color: var(--color-accent-50);
+    --desired-color: var(--color-accent-100);
+  */
+}
+
 @keyframes changeColor {
+  from {
+    background-color: var(--original-color);
+  }
   to {
     background-color: var(--desired-color);
   }
@@ -32,8 +53,7 @@
 
 .fadeIn-vol-2-animation {
   opacity: 0;
-  animation: fadeIn-vol-2 500ms 850ms cubic-bezier(0.47, 0, 0.745, 0.715)
-    forwards;
+  animation: fadeIn-vol-2 500ms 850ms cubic-bezier(0.47, 0, 0.745, 0.715);
 }
 
 @keyframes fadeIn-vol-2 {
@@ -54,7 +74,7 @@
 
 @keyframes fadeIn-from-left {
   from {
-    transform: translateX(-100%);
+    transform: translateX(-50%);
     opacity: 0;
   }
   to {
@@ -64,7 +84,7 @@
 }
 
 .fadeOut-to-left-animation {
-  animation: fadeIn-to-left 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19)
+  animation: fadeOut-to-left 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19)
     forwards;
   animation-play-state: paused;
 }
@@ -75,7 +95,7 @@
     opacity: 1;
   }
   to {
-    transform: translateX(-100%);
+    transform: translateX(-50%);
     opacity: 0;
   }
 }
@@ -87,7 +107,7 @@
 
 @keyframes fadeIn-from-top {
   from {
-    transform: translateY(-100%);
+    transform: translateY(-50%);
     opacity: 0;
   }
   to {
@@ -107,7 +127,7 @@
     opacity: 1;
   }
   to {
-    transform: translateY(-100%);
+    transform: translateY(-50%);
     opacity: 0;
   }
 }
@@ -120,7 +140,7 @@
 
 @keyframes fadeIn-from-right {
   from {
-    transform: translateX(100%);
+    transform: translateX(50%);
     opacity: 0;
   }
   to {
@@ -130,7 +150,7 @@
 }
 
 .fadeOut-to-right-animation {
-  animation: fadeIn-to-right 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19)
+  animation: fadeOut-to-right 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19)
     forwards;
   animation-play-state: paused;
 }
@@ -141,7 +161,7 @@
     opacity: 1;
   }
   to {
-    transform: translateX(100%);
+    transform: translateX(50%);
     opacity: 0;
   }
 }
@@ -154,7 +174,7 @@
 
 @keyframes fadeIn-from-bottom {
   from {
-    transform: translateY(100%);
+    transform: translateY(50%);
     opacity: 0;
   }
   to {
@@ -175,14 +195,36 @@
     opacity: 1;
   }
   to {
-    transform: translateY(100%);
+    transform: translateY(50%);
     opacity: 0;
+  }
+}
+
+:root {
+  --fade-in-on-load: fadeInOnLoad 300ms forwards
+    cubic-bezier(0.55, 0.085, 0.68, 0.53);
+}
+
+.fadeInOnLoad {
+  animation: var(--fade-in-on-load);
+}
+
+@keyframes fadeInOnLoad {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
 
 @media (prefers-reduced-motion: reduce) {
   * {
-    animation-duration: 100ms !important;
-    animation-delay: 50ms !important;
+    --duration: 100ms;
+    --delay: 50ms;
+    animation-duration: var(--duration) !important;
+    transition-duration: var(--duration) !important;
+    animation-delay: var(--delay) !important;
+    transition-delay: var(--delay) !important;
   }
 }
