--- a/src/app/getting-started/first-view/first-view.component.scss
+++ b/src/app/getting-started/first-view/first-view.component.scss
@@ -1,26 +1,29 @@
 @use "../../../scss/utils.scss" as *;
+@use "../../../scss/components.scss" as *;
+@use "../../../scss/viewport.scss" as view;
 
-main,
-.greeting {
-  background-color: var(--color-accent-50);
-  color: var(--contrast-color-accent-50);
+:host {
+  display: block;
 }
 
 main {
-  @extend %mainframe;
+  @extend %deselected;
   overflow: hidden;
+}
 
-  @media (max-height: 700px) {
-    .greeting {
-      min-height: 50vh;
-    }
-  }
+.bg-image {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .greeting {
-  --border-radius: 35px;
+  background-color: var(--color-accent-50);
+  color: var(--contrast-color-accent-50);
+  --border-radius: #{border-radius-implicit("lg")};
   position: fixed;
-  left: 0;
+  width: 100%;
+  right: 0;
   bottom: 0;
   padding: 1.8em;
   min-height: 65vh;
@@ -33,31 +36,30 @@ main {
   z-index: 0;
 
   display: grid;
-  gap: 0.75vh;
+  gap: free-space("xs");
   place-items: center;
 
-  animation: fadeIn-vol-1 1s cubic-bezier(0.455, 0.03, 0.515, 0.955) 150ms both;
+  animation: fadeIn-vol-1 1s cubic-bezier(0.455, 0.03, 0.515, 0.955) 150ms;
 
   &__header {
     margin-bottom: 0.5em;
-    font-size: var(--h1);
   }
 
   &__par-container {
     --space-between-items: 1.4em;
     position: relative;
     padding: var(--space-between-items);
-    color: var(--contrast-color-100);
+    color: var(--contrast-color-accent-200);
 
     display: grid;
     row-gap: var(--space-between-items);
 
     &::before {
       @extend %fillBeforeAfter;
+      @include border-radius("lg");
+      @include inset-box-shadow(var(--color-accent-100));
       background-color: var(--color-accent-200);
-      box-shadow: inset 0px 0px 45px 10px rgba(255, 255, 255, 0.2);
       opacity: 0.8;
-      border-radius: 20px;
     }
   }
 
@@ -77,26 +79,22 @@ main {
       top: 1rem;
       bottom: 1rem;
     }
-    border: none;
-    padding: 0.75em 1.25em;
+    @extend %common-button;
     font-size: var(--h3);
     font-weight: 500;
     text-decoration: none;
-    color: inherit;
+    color: var(--contrast-color-primary-500);
     z-index: 0;
 
     &,
     &::before {
       cursor: pointer;
-      border-radius: 100px;
+      @include border-radius("pill");
     }
 
     &::before {
       z-index: -1;
-      @extend %fillBeforeAfter;
-      background-color: var(--color-main-400);
-      box-shadow: inset 0px 0px 45px 10px rgba(255, 255, 255, 0.25);
-      color: var(--contrast-color-400);
+      @extend %fillBeforeAfter, %primary-button;
       transition: opacity 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
     }
 
@@ -118,12 +116,41 @@ main {
   }
 }
 
-/*
+@keyframes fillTheView-SM-Plus {
+  to {
+    transform: translateY(0%);
+    border-radius: 0;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    max-width: 100%;
+    min-height: 100vh;
+    min-height: 100dvh;
+  }
+}
 
-Notes for the desktop view:
+@media (min-width: view.$view-xs) {
+  .bg-image {
+    border-radius: #{border-radius-implicit("lg") * 2};
+    width: min(57vw, view.$view-xs);
+    top: 50%;
+    transform: translateY(-50%);
+    right: 42.5%;
+  }
 
-Breakpoint - 700px
+  .greeting {
+    position: absolute;
+    border-radius: var(--border-radius);
+    box-shadow: inset 45px 0 50px -25px var(--color-accent-300);
+    bottom: 50%;
+    transform: translateY(50%);
+    left: 42%;
+    min-height: 50vh;
+    max-width: min(55vw, 450px);
+  }
 
-The image on the left side and the other parts on the right (for all getting-started views)
-
-*/
+  .fill-the-view-animation {
+    animation-name: fillTheView-SM-Plus;
+    box-shadow: none;
+  }
+}
