Renamed and expanded auth components.
- Added granulated firebase auth services for auth state, managing account session, db connection, email actions,
- Added LocalStorageService for communication with localStorage API,
- Added local user (guest) account service with the ability to connect to localStorage service,
- Prepared Auth Models for type safety,
- Improved custom validations,
- Refactored the LoginRegisterCommonFeatures class into FormCommonFeaturesService service,
- Renamed styles.scss to form.scss for better readability,
- Added color transition animation for guest and online components while moving from choose-path component,
- Added mat-spinner-toggler for register and login form (online).

--- a/src/app/auth-components/online/online.component.scss
+++ b/src/app/auth-components/online/online.component.scss
@@ -1,38 +1,59 @@
 @use "../../../scss/utils.scss" as *;
 
+main,
+.content,
 .container,
-.component-content {
+.component-content,
+.login-register-content {
   display: grid;
 }
 
+main {
+  place-content: center;
+  color: var(--contrast-color-accent-50);
+
+  --original-color: var(--color-accent-100);
+  --desired-color: var(--color-accent-50);
+}
+
 .container {
-  @extend %mainframe;
+  margin: {
+    left: free-space("sm");
+    right: free-space("sm");
+  }
+}
+
+.content {
   --min-value-break: 0.5rem;
   --max-value-break: 2.5vh;
   --break-between-elements: max(var(--min-value-break), var(--max-value-break));
-  --break-between-elements-2: max(
-    var(--min-value-break) / 2,
-    var(--max-value-break) / 2
-  );
+
   grid-template-rows: 1fr auto;
   row-gap: var(--break-between-elements);
-  padding-top: var(--break-between-elements);
   padding-bottom: var(--break-between-elements);
-  background-color: var(--color-accent-50);
 }
 
 .login-register {
-  &-content {
+  &-content,
+  &-switch {
     display: grid;
     align-content: center;
   }
 
+  &-content {
+    animation: var(--fade-in-on-load);
+  }
+
   &-switch {
-    font-size: var(--p);
-    font-weight: 500;
-    cursor: pointer;
-    & b {
-      color: var(--contrast-color-accent-500);
+    gap: free-space("sm");
+
+    & > a {
+      text-align: center;
+      text-decoration: none;
+      font-size: var(--p);
+      font-weight: 500;
+      cursor: pointer;
+      color: inherit;
     }
   }
 }
@@ -43,17 +64,25 @@
   justify-items: center;
 }
 
-.signin-with-google {
-  @include box-shadow-inset(--color-accent-50);
-  @extend %flex-center, %gap-sm;
+.sign-in-with-google {
+  @include inset-box-shadow-with-transition(var(--color-accent-50));
+  @extend %flex-center;
+  @include border-radius("sm");
+  gap: free-space("sm");
   padding: 1.5vmax;
   border: none;
   cursor: pointer;
-  border-radius: 10px;
   background-color: white;
   color: black;
 
   & > span {
-    @extend %font-size-sm;
+    font-size: var(--form-input);
+    font-weight: 500;
+  }
+}
+
+.go-back-button {
+  &-wrapper {
+    padding: free-space("xs") 0;
   }
 }
