--- a/src/app/auth-components/online/online.component.html
+++ b/src/app/auth-components/online/online.component.html
@@ -1,38 +1,80 @@
-<main class="container" #container>
-  <div class="login-register-content">
-    <ng-container *ngIf="register; else loginBlock">
-      <app-register-component
-        [emailAlreadyInUse]="alreadyInUseError"
-        (data)="handleSubmit($event)"
+<main #mainTagRef>
+  <section class="container">
+    <div class="go-back-button-wrapper">
+      <app-previous-page-button
+        class="go-back-button"
+        (clicked)="
+          viewTransitionService.goBack(
+            viewContainer,
+            '/getting-started/choose-path'
+          )
+        "
       />
-    </ng-container>
-    <ng-template #loginBlock>
-      <app-login-component
-        [wrongEmailOrPassword]="wrongEmailOrPassword"
-        [emailDoesNotExist]="emailDoesNotExist"
-        (data)="handleSubmit($event)"
-      />
-    </ng-template>
-  </div>
-  <div class="component-content">
-    <a (click)="register = !register" class="login-register-switch">
-      <ng-container *ngIf="register; else loginText"
-        >Wanna Log in?</ng-container
-      >
-      <ng-template #loginText>Wanna Register?</ng-template>
-    </a>
-    <button
-      type="button"
-      class="signin-with-google"
-      appCustomMatRipple
-      (click)="authService.continueWithGoogle()"
-    >
-      <app-google-logo
-        class="google-logo"
-        [svgWidth]="svgWidth"
-        [svgHeight]="svgHeight"
-      ></app-google-logo>
-      <span #googleButton>Continue with Google</span>
-    </button>
-  </div>
+    </div>
+    <div class="content" #viewContainer>
+      <div class="login-register-content" aria-label="Online account form">
+        <ng-container *ngIf="register; else loginBlock">
+          <app-register
+            [emailAlreadyInUse]="alreadyInUseError"
+            (data)="handleSubmit($event)"
+            (rememberMe)="authStateService.rememberMe($event)"
+          />
+        </ng-container>
+        <ng-template #loginBlock>
+          <app-login
+            [wrongEmailOrPassword]="wrongEmailOrPassword"
+            [emailDoesNotExist]="emailDoesNotExist"
+            (data)="handleSubmit($event)"
+            (rememberMe)="authStateService.rememberMe($event)"
+          />
+        </ng-template>
+      </div>
+      <div class="component-content">
+        <div class="login-register-switch">
+          <ng-container *ngIf="register; else loginText">
+            <a
+              (click)="this.register = !this.register"
+              (keyup.enter)="this.register = !this.register"
+              tabindex="0"
+              >Wanna Log in?</a
+            >
+          </ng-container>
+          <ng-template #loginText>
+            <a
+              (click)="
+                viewTransitionService.goForward(
+                  viewContainer,
+                  '/forgot-password'
+                )
+              "
+              (keyup.enter)="
+                viewTransitionService.goForward(
+                  viewContainer,
+                  '/forgot-password'
+                )
+              "
+              tabindex="0"
+              >Forgot your password?</a
+            >
+            <a
+              (click)="this.register = !this.register"
+              (keyup.enter)="this.register = !this.register"
+              tabindex="0"
+              >Wanna Register?</a
+            >
+          </ng-template>
+        </div>
+        <button
+          type="button"
+          class="sign-in-with-google"
+          appCustomMatRipple
+          (click)="googleAuth('continueWithGoogle')"
+        >
+          <!-- 25px as the view size for the svg -->
+          <app-google-logo class="google-logo" svgWidth="25"></app-google-logo>
+          <span>Continue with Google</span>
+        </button>
+      </div>
+    </div>
+  </section>
 </main>
