Removed "/" from "/src" in style imports

--- a/src/app/auth-components/auth-state/auth-state.component.scss
+++ b/src/app/auth-components/auth-state/auth-state.component.scss
@@ -1,4 +1,4 @@
-@use "/src/scss/components.scss" as *;
+@use "src/scss/components.scss" as *;
 
 .content {
   transform: translateY(calc((-48.78px / 2)));
