--- a/src/app/auth-components/verify/verify.component.scss
+++ b/src/app/auth-components/verify/verify.component.scss
@@ -1,5 +1,5 @@
-@use "/src/scss/utils.scss" as *;
-@use "/src/scss/components.scss" as *;
+@use "src/scss/utils.scss" as *;
+@use "src/scss/components.scss" as *;
 
 main,
 .content,
